2009-10-06  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/stat_win.php: fix the jquery lost in the last query, fix
	the auto-refresh graph, fix z-index level for calendar and fix the set begin
	data for graph.
	Fixes: 2857280

2009-10-06  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/agent_manager.php: change the textbox interval for
	"print_extended_select_for_time" widget.
	* include/styles/pandora_minimal.css, operation/agentes/stat_win.php: change
	the period widget for "print_extended_select_for_time" too, and change
	the css for enlarge the float menu for new item.

2009-10-06  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions.php: add "exactly" param to "human_time_description_raw"
	for return the time in time fractions as example "1 day 23:23:2".

2009-10-06  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: add new function for add extend widget
	"print_extended_select_for_time", that write a two html control a
	select and textbox and scripting for interconet twice components and
	when change the textbox and save add the value in select and when
	change the selected put in textbox.

2009-10-05  Sancho Lerena   <slerena@artica.es>

	* include/fgraph.php: Solved ticks in X label for boolean graphs.

	* operation/agentes/datos_agente.php: Show absolute timestamp and
	data with format_numeric() filter.

	* operation/agentes/estado_monitores.php: Solved typo.


2009-10-01  Miguel de Dios  <miguel.dedios@artica.es>

	* pandora_console/godmode/reporting/reporting_builder.php: change the
	agent select html for ajax autocomplete ajax. Fix in part the bug
	#2870769, exactly 1º paragraph.

2009-10-01  Miguel de Dios  <miguel.dedios@artica.es>

	* pandora_console/godmode/alerts/alert_list.php: fix small bug that throw
	notice message for a array uninitialize.

2009-09-30  Sancho Lerena  <slerena@artica.es>

	* pandora_console.spec: Updated spec for a more complete  uninstall. 
